--- a/src/index.html
+++ b/src/index.html
@@ -4,24 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excuse Generator</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
     <div class="container-fluid text-center">
       <h1 class="mt-5">No te lo vas a creer pero...</h1>
-      <h1 id="excusa" class="mt-5">My dog eat my food</h1>
-      <button id="btn">Generate new excuse</button>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <h1 id="excusa" class="mt-5"></h1>
+      <button id="btn">Generar excusa</button>
     </div>
   </body>
 </html>
